[package]
name = "peerclaw-ironclaw-plugin"
version = "0.1.0"
edition = "2021"
description = "IronClaw WASM channel plugin for PeerClaw P2P agent identity and trust"
license = "Apache-2.0"
repository = "https://github.com/peerclaw/ironclaw-plugin"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wit-bindgen = "0.41"

[package.metadata.component]
package = "peerclaw:channel"
target = { path = "wit/channel.wit", world = "sandboxed-channel" }
